Correcting some styles and adding the dark mode color for links.

--- a/src/components/latestNewsSingleContainer/LatestNewsSingleContainer.css
+++ b/src/components/latestNewsSingleContainer/LatestNewsSingleContainer.css
@@ -30,7 +30,7 @@
   text-decoration: none;
   text-transform: uppercase;
   font-size: 12px;
-  padding: 0 100px 0 100px;
+  padding: 0 50px 0 50px;
 }
 
 .latestNewsContentContainer {
